
// tags:
// `Added` for new features.
// `Changed` for changes in existing functionality.
// `Deprecated` for once-stable features removed in upcoming releases.
// `Removed` for deprecated features removed in this release.
// `Fixed` for any bug fixes.
// `Security` to invite users to upgrade in case of vulnerabilities.

[[v3.3.0]]
v3.3.0 (unreleased)
-------------------

Removed
~~~~~~~

- Support for macOS 11 Big Sur is dropped. Binaries are now built on macOS 12
  Monterey and are unlikely to still run on older macOS versions.

Changed
~~~~~~~

- The qute-pass userscript now has better support for internationalized domain
  names when using the pass backend - both domain names and secret paths are
  normalized before comparing (#8133)
- Ignored URL query parameters (via `url.yank_ignored_parameters`) are now
  respected when yanking any URL (for example, through hints with `hint links
  yank`). The `{url:yank}` substitution has also been added as a version of
  `{url}` that respects ignored URL query parameters. (#7879)

Fixed
~~~~~

- A minor memory leak of QItemSelectionModels triggered by closing the
  completion dialog has been resolved. (#7950)

[[v3.2.1]]
v3.2.1 (2024-06-25)
-------------------

Added
~~~~~

- There is now a separate macOS release built for Apple Silicon. A Universal
  Binary might follow with a later release.

Changed
~~~~~~~

- Windows and macOS releases now bundle Qt 6.7.2, which includes security fixes
  up to Chromium 125.0.6422.142.

Fixed
~~~~~

- When the selected Qt wrapper is unavailable, qutebrowser now again shows a
  GUI error message instead of only an exception in the terminal.

[[v3.2.0]]
v3.2.0 (2024-06-03)
-------------------

Deprecated
~~~~~~~~~~

- This will be the last feature release supporting macOS 11 Big Sur.
  Starting with qutebrowser v3.3.0, macOS 12 Monterey will be the oldest
  supported version.

Added
~~~~~

- When qutebrowser receives a SIGHUP it will now reload any config.py file